#5052 mobile solution implemented travis fix for openshift

--- a/src/main/assets/less/core.less
+++ b/src/main/assets/less/core.less
@@ -571,6 +571,10 @@ md-toast.md-toast-error-theme .md-toast-content{
   text-align: right;
 }
 
+/* mobile menu */
+.jd-mobile-menu.active {
+  font-weight: 700;
+}
 /* tabs */
 .jd-tab {
   display: block;
