--- a/src/main/assets/styles/jobdesk.css
+++ b/src/main/assets/styles/jobdesk.css
@@ -509,6 +509,10 @@ md-toast.md-toast-error-theme .md-toast-content {
 .my-location-button {
   text-align: right;
 }
+/* mobile menu */
+.jd-mobile-menu.active {
+  font-weight: 700;
+}
 /* tabs */
 .jd-tab {
   display: block;
